edited some stuff

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,7 +21,9 @@ Messages:
     - "&7/Sumo &eReload &7Reload configuration file and stop running tournament"
   invalid_args: "&cInvalid arguments"
   no_permission: "&cSorry, but you're not allowed to execute this command"
-  console_only: "&cOnly players can execute this command"
+  player_only: "&cOnly players can execute this command"
+  location_set: "&7Location &e<loc> &7has been set to your location"
+  invalid_location: "&cInvalid location type!"
   modify_location_failed: "&cYou can't modify locations while the tournament is running"
   start_failed: "&cFailed to start sumo tournament, one or more setting is not set."
   tournament_already_started: "&cTournament is already in use"
