--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -51,11 +51,11 @@ Messages:
 
 Broadcasts:
   tournament_started:
-    - "&e{player} &7has started a &e&lSUMO Tournament"
+    - "&e{player} &7has sّtarted a ّ&e&lSUMO Tournament"
     - "Type &e/Sumo join &7or &a[CLICK ME]"
   sumo_join: "&e{player} &7has joined"
   round_start: "&7Round &e#{roundNumber}: &e{player1} &7VS &e{player2}"
-  tournament_start: "&7Tournament has &eStarted!"
+  tournament_start: "&7Touّّrnament has &eStarted!"
   round_win: "&7Player &e{winner} &7won against &c{loser}"
 
 
