--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -33,7 +33,7 @@ Messages:
   help_message:
     - "&7/Sumo &eStart &7Start sumo tournament"
     - "&7/Sumo &eSetLocation &7<LocationType> &7Set targeted location"
-    - "&7/Sumo &eReload &7Reload configuration file and stop running tournament"
+    - "&7/Sumo &eReload &7Reload config.yml"
   invalid_args: "&cInvalid arguments"
   no_permission: "&cSorry, but you're not allowed to execute this command"
   player_only: "&cOnly players can execute this command"
@@ -48,6 +48,7 @@ Messages:
   click_hover: "&aClick me"
   round_count_down: "&7Starting in &e{seconds} second(s)"
   round_started: "&7Round &eStarted!"
+  configuration_reloaded: "&7Configuration file has been &ereloaded"
 
 
 Broadcasts:
